--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-auth-library": "^7.10.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "nodemailer": "^6.7.2",
-    "passport": "^0.5.0"
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
+    "path-to-regexp": "^6.2.0"
   }
 }
